spotless fmt